fixed overflow for firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -444,6 +444,11 @@ Recipe Card Styles
           .title-container .recipe-title,
           .title-container .recipe-title a {
             overflow: hidden;
+            overflow-wrap: break-word;
+          }
+
+          .title-container {
+            overflow: hidden;
           }
         }
 
